--- a/index.html
+++ b/index.html
@@ -1,15 +1,29 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Dashboard</title>
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
     <header>
-        <h1>Welcome to My Dashboard</h1>
-        <h2>My Name is Muhammad Syarruri</h2>
+        <div class="judul">
+            <img src="assets/picture/profile.jpg" alt="profile picture">
+            <div>
+                <h1>Welcome to My Dashboard</h1>
+                <h2>My Name is Muhammad Syarruri</h2>
+            </div>
+        </div>
+        
+        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
+            <path fill="#E8F9FF" fill-opacity="1"
+                d="M0,128L80,106.7C160,85,320,43,480,53.3C640,64,800,128,960,144C1120,160,1280,128,1360,112L1440,96L1440,320L1360,320C1280,320,1120,320,960,320C800,320,640,320,480,320C320,320,160,320,80,320L0,320Z">
+            </path>
+        </svg>
     </header>
 </body>
+
 </html>
