--- a/index.html
+++ b/index.html
@@ -5,25 +5,48 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Dashboard</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
-    <header>
-        <div class="judul">
-            <img src="assets/picture/profile.jpg" alt="profile picture">
-            <div>
-                <h1>Welcome to My Dashboard</h1>
-                <h2>My Name is Muhammad Syarruri</h2>
+    <nav class="navbar navbar-expand-lg" style="background-color: #C5BAFF;">
+        <div class="container-fluid">
+            <a class="navbar-brand ms-3" href="#">IMBA.corp</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup"
+                aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+                <div class="navbar-nav">
+                    <a class="nav-link active" aria-current="page" href="#">Home</a>
+                    <a class="nav-link" href="#">Features</a>
+                    <a class="nav-link" href="#">Pricing</a>
+                </div>
             </div>
         </div>
-        
-        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
+    </nav>
+
+    <header class="profile d-flex align-items-center gap-4 justify-content-center" style="height: 70vh;">
+        <img src="assets/picture/profile.jpg" alt="Muhammad Syarruri" width="200px" class="rounded-circle ms-2">
+        <div class="text-center ">
+            <h1 class="fw-bold">Welcome to My Homepage</h1>
+            <h2>My Name is Muhammad Syarruri</h2>
+        </div>
+        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320" class="wave">
             <path fill="#E8F9FF" fill-opacity="1"
-                d="M0,128L80,106.7C160,85,320,43,480,53.3C640,64,800,128,960,144C1120,160,1280,128,1360,112L1440,96L1440,320L1360,320C1280,320,1120,320,960,320C800,320,640,320,480,320C320,320,160,320,80,320L0,320Z">
+                d="M0,96L48,128C96,160,192,224,288,240C384,256,480,224,576,229.3C672,235,768,277,864,261.3C960,245,1056,171,1152,154.7C1248,139,1344,181,1392,202.7L1440,224L1440,320L1392,320C1344,320,1248,320,1152,320C1056,320,960,320,864,320C768,320,672,320,576,320C480,320,384,320,288,320C192,320,96,320,48,320L0,320Z">
             </path>
         </svg>
     </header>
+
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
+        integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js"
+        integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy"
+        crossorigin="anonymous"></script>
 </body>
 
 </html>
