--- a/index.html
+++ b/index.html
@@ -28,18 +28,18 @@
         </div>
     </nav>
 
-    <header class="profile d-flex align-items-center gap-4 justify-content-center" style="height: 70vh;">
-        <img src="assets/picture/profile.jpg" alt="Muhammad Syarruri" width="200px" class="rounded-circle ms-2">
-        <div class="text-center ">
+    <div class="jumbotron" style="padding-top: 2em;">
+        <div class="text-center">
+            <img src="assets/picture/profile.jpg" alt="Muhammad Syarruri" width="200px" class="rounded-circle ">
             <h1 class="fw-bold">Welcome to My Homepage</h1>
             <h2>My Name is Muhammad Syarruri</h2>
         </div>
-        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320" class="wave">
+        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
             <path fill="#E8F9FF" fill-opacity="1"
-                d="M0,96L48,128C96,160,192,224,288,240C384,256,480,224,576,229.3C672,235,768,277,864,261.3C960,245,1056,171,1152,154.7C1248,139,1344,181,1392,202.7L1440,224L1440,320L1392,320C1344,320,1248,320,1152,320C1056,320,960,320,864,320C768,320,672,320,576,320C480,320,384,320,288,320C192,320,96,320,48,320L0,320Z">
+                d="M0,64L48,69.3C96,75,192,85,288,112C384,139,480,181,576,192C672,203,768,181,864,149.3C960,117,1056,75,1152,64C1248,53,1344,75,1392,85.3L1440,96L1440,320L1392,320C1344,320,1248,320,1152,320C1056,320,960,320,864,320C768,320,672,320,576,320C480,320,384,320,288,320C192,320,96,320,48,320L0,320Z">
             </path>
         </svg>
-    </header>
+    </div>
 
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
         integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
