--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Dashboard</title>
+    <title>Homepage</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
@@ -21,25 +21,49 @@
             <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
                 <div class="navbar-nav">
                     <a class="nav-link active" aria-current="page" href="#">Home</a>
-                    <a class="nav-link" href="#">Features</a>
-                    <a class="nav-link" href="#">Pricing</a>
+                    <a class="nav-link" href="#">Project</a>
+                    <a class="nav-link" href="#">Contact</a>
                 </div>
             </div>
         </div>
     </nav>
 
+    <!-- Header Start-->
     <div class="jumbotron" style="padding-top: 2em;">
         <div class="text-center">
             <img src="assets/picture/profile.jpg" alt="Muhammad Syarruri" width="200px" class="rounded-circle ">
             <h1 class="fw-bold">Welcome to My Homepage</h1>
             <h2>My Name is Muhammad Syarruri</h2>
         </div>
-        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
+        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320" class="wave">
             <path fill="#E8F9FF" fill-opacity="1"
                 d="M0,64L48,69.3C96,75,192,85,288,112C384,139,480,181,576,192C672,203,768,181,864,149.3C960,117,1056,75,1152,64C1248,53,1344,75,1392,85.3L1440,96L1440,320L1392,320C1344,320,1248,320,1152,320C1056,320,960,320,864,320C768,320,672,320,576,320C480,320,384,320,288,320C192,320,96,320,48,320L0,320Z">
             </path>
         </svg>
     </div>
+    <!-- Header End -->
+
+    <!-- Card Container Start -->
+    <h2 class="display-4 fw-bold text-center mb-5">Project</h2>
+
+    <div class="d-flex flex-wrap gap-5 justify-content-center mb-5">
+        <a href="https://telurasinhabibah.my.id/" target="_blank"
+            class="link-offset-2 link-underline link-underline-opacity-0 text-dark zoom-card">
+            <div class="card" style="width: 18rem;">
+                <img src="assets/picture/webtelurasinhabibah.png" class="card-img-top" alt="telurasinhabibah.my.id">
+                <div class="card-body">
+                    <h5 class="card-title">telurasinhabibah.my.id</h5>
+                    <p class="card-text">Website jualan telur asin untuk usaha keluarga</p>
+                    <div class="d-flex gap-1">
+                        <p class="html-tag">HTML</p>
+                        <p class="css-tag">CSS</p>
+                        <p class="js-tag">JavaScript</p>
+                    </div>
+                </div>
+            </div>
+        </a>
+    </div>
+    <!-- Card Container End -->
 
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
         integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
