--- a/index.html
+++ b/index.html
@@ -41,10 +41,11 @@
             </path>
         </svg>
     </div>
+
     <!-- Header End -->
 
     <!-- Card Container Start -->
-    <h2 class="display-4 fw-bold text-center mb-5">Project</h2>
+    <h2 class="display-5 fw-bold text-center mb-5">Project</h2>
 
     <div class="d-flex flex-wrap gap-5 justify-content-center mb-5">
         <a href="https://telurasinhabibah.my.id/" target="_blank"
@@ -63,7 +64,39 @@
             </div>
         </a>
     </div>
+
+    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320" class="wave">
+        <path fill="#C4D9FF" fill-opacity="1"
+            d="M0,96L80,90.7C160,85,320,75,480,106.7C640,139,800,213,960,213.3C1120,213,1280,139,1360,101.3L1440,64L1440,320L1360,320C1280,320,1120,320,960,320C800,320,640,320,480,320C320,320,160,320,80,320L0,320Z">
+        </path>
+    </svg> 
     <!-- Card Container End -->
+
+    <!-- Contact Start -->
+    <div class="contact d-flex flex-column align-items-center">
+        <h2 class="display-5 fw-bold text-center mb-5">Contact Me</h2>
+
+        <form class="needs-validation" style="width: 35em;" action="https://api.web3forms.com/submit" method="POST">
+
+            <input type="hidden" name="access_key" value="64dbb743-f015-44b7-85c6-1e1478536280">
+
+            <div class="mb-3">
+                <label for="formNama" class="form-label">Nama Lengkap</label>
+                <input type="text" class="form-control" id="formNama" aria-describedby="nama" name="nama" required>
+            </div>
+            <div class="mb-3">
+                <label for="formEmail" class="form-label">Email</label>
+                <input type="email" class="form-control" id="formEmail" aria-describedby="email" name="email" required>
+            </div>
+            <label for="floatingTextarea2">Pesan</label>
+            <div class="mb-3 form-floating">
+                <textarea class="form-control" id="floatingTextarea2" name="pesan" required
+                    style="height: 100px"></textarea>
+            </div>
+            <button type="submit" class="btn border border-black">Kirim</button>
+        </form>
+    </div>
+    <!-- Contact End -->
 
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
         integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
