--- a/index.html
+++ b/index.html
@@ -8,12 +8,13 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
+    <script src="https://kit.fontawesome.com/8976aeb13d.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
-    <nav class="navbar navbar-expand-lg" style="background-color: #C5BAFF;">
+    <nav class="navbar navbar-expand-lg sticky-top" style="background-color: #C5BAFF;">
         <div class="container-fluid">
-            <a class="navbar-brand ms-3" href="#">IMBA.corp</a>
+            <a class="navbar-brand ms-3" href="#">MUSYA</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup"
                 aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -21,15 +22,32 @@
             <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
                 <div class="navbar-nav">
                     <a class="nav-link active" aria-current="page" href="#">Home</a>
-                    <a class="nav-link" href="#">Project</a>
-                    <a class="nav-link" href="#">Contact</a>
+                    <a class="nav-link" href="#project">Project</a>
+                    <a class="nav-link" href="#contact">Contact</a>
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
+                            aria-expanded="false">
+                            Sosial Media
+                        </a>
+                        <ul class="dropdown-menu">
+                            <li><a class="dropdown-item" href="https://www.instagram.com/syarruri/" target="_blank"><i class="fa-brands fa-instagram"></i> Instagram</a></li>
+                            <li>
+                                <hr class="dropdown-divider">
+                            </li>
+                            <li><a class="dropdown-item" href="https://www.facebook.com/profile.php?id=61552016582928&locale=id_ID" target="_blank"><i class="fa-brands fa-facebook"></i> Facebook</a></li>
+                            <li>
+                                <hr class="dropdown-divider">
+                            </li>
+                            <li><a class="dropdown-item" href="https://www.linkedin.com/in/muhammad-syarruri-4a4136309/" target="_blank"><i class="fa-brands fa-linkedin"></i> Linkedin</a></li>
+                        </ul>
+                    </li>
                 </div>
             </div>
         </div>
     </nav>
 
     <!-- Header Start-->
-    <div class="jumbotron" style="padding-top: 2em;">
+    <section class="jumbotron" style="padding-top: 2em;">
         <div class="text-center">
             <img src="assets/picture/profile.jpg" alt="Muhammad Syarruri" width="200px" class="rounded-circle ">
             <h1 class="fw-bold">Welcome to My Homepage</h1>
@@ -40,13 +58,13 @@
                 d="M0,64L48,69.3C96,75,192,85,288,112C384,139,480,181,576,192C672,203,768,181,864,149.3C960,117,1056,75,1152,64C1248,53,1344,75,1392,85.3L1440,96L1440,320L1392,320C1344,320,1248,320,1152,320C1056,320,960,320,864,320C768,320,672,320,576,320C480,320,384,320,288,320C192,320,96,320,48,320L0,320Z">
             </path>
         </svg>
-    </div>
+    </section>
 
     <!-- Header End -->
 
     <!-- Card Container Start -->
-    <h2 class="display-5 fw-bold text-center mb-5">Project</h2>
-
+    <h2 class="display-5 fw-bold text-center mb-5 pt-5" id="project">Project</h2>
+    
     <div class="d-flex flex-wrap gap-5 justify-content-center mb-5">
         <a href="https://telurasinhabibah.my.id/" target="_blank"
             class="link-offset-2 link-underline link-underline-opacity-0 text-dark zoom-card">
@@ -69,11 +87,11 @@
         <path fill="#C4D9FF" fill-opacity="1"
             d="M0,96L80,90.7C160,85,320,75,480,106.7C640,139,800,213,960,213.3C1120,213,1280,139,1360,101.3L1440,64L1440,320L1360,320C1280,320,1120,320,960,320C800,320,640,320,480,320C320,320,160,320,80,320L0,320Z">
         </path>
-    </svg> 
+    </svg>
     <!-- Card Container End -->
 
     <!-- Contact Start -->
-    <div class="contact d-flex flex-column align-items-center">
+    <div class="contact d-flex flex-column align-items-center" id="contact">
         <h2 class="display-5 fw-bold text-center mb-5">Contact Me</h2>
 
         <form class="needs-validation" style="width: 35em;" action="https://api.web3forms.com/submit" method="POST">
