menambahkan tanggal dibuat dan tanggal terakhir di update

--- a/index.html
+++ b/index.html
@@ -78,6 +78,10 @@
                         <p class="css-tag">CSS</p>
                         <p class="js-tag">JavaScript</p>
                     </div>
+                    <div class="text-end date">
+                        <p>Created on : February 2024</p>
+                        <p>Last update : November 2024</p>
+                    </div>
                 </div>
             </div>
         </a>
