membuat kotak yang bisa di hover pada bagian judul

--- a/index.html
+++ b/index.html
@@ -30,15 +30,19 @@
                             Sosial Media
                         </a>
                         <ul class="dropdown-menu">
-                            <li><a class="dropdown-item" href="https://www.instagram.com/syarruri/" target="_blank"><i class="fa-brands fa-instagram"></i> Instagram</a></li>
+                            <li><a class="dropdown-item" href="https://www.instagram.com/syarruri/" target="_blank"><i
+                                        class="fa-brands fa-instagram"></i> Instagram</a></li>
                             <li>
                                 <hr class="dropdown-divider">
                             </li>
-                            <li><a class="dropdown-item" href="https://www.facebook.com/profile.php?id=61552016582928&locale=id_ID" target="_blank"><i class="fa-brands fa-facebook"></i> Facebook</a></li>
+                            <li><a class="dropdown-item"
+                                    href="https://www.facebook.com/profile.php?id=61552016582928&locale=id_ID"
+                                    target="_blank"><i class="fa-brands fa-facebook"></i> Facebook</a></li>
                             <li>
                                 <hr class="dropdown-divider">
                             </li>
-                            <li><a class="dropdown-item" href="https://www.linkedin.com/in/muhammad-syarruri-4a4136309/" target="_blank"><i class="fa-brands fa-linkedin"></i> Linkedin</a></li>
+                            <li><a class="dropdown-item" href="https://www.linkedin.com/in/muhammad-syarruri-4a4136309/"
+                                    target="_blank"><i class="fa-brands fa-linkedin"></i> Linkedin</a></li>
                         </ul>
                     </li>
                 </div>
@@ -47,9 +51,12 @@
     </nav>
 
     <!-- Header Start-->
-    <section class="jumbotron" style="padding-top: 2em;">
-        <div class="text-center">
-            <img src="assets/picture/profile.jpg" alt="Muhammad Syarruri" width="200px" class="rounded-circle ">
+
+    <div class="container-kotak" id="kontainer"></div>
+    <section class="jumbotron text-center" style="padding-top: 2em;">
+        <img src="assets/picture/profile.jpg" alt="Muhammad Syarruri" width="200px" class="rounded-circle position-relative z-3">
+        <br>
+        <div class="d-inline-flex flex-column">
             <h1 class="fw-bold">Welcome to My Homepage</h1>
             <h2>My Name is Muhammad Syarruri</h2>
         </div>
@@ -64,7 +71,7 @@
 
     <!-- Card Container Start -->
     <h2 class="display-5 fw-bold text-center mb-5 pt-5" id="project">Project</h2>
-    
+
     <div class="d-flex flex-wrap gap-5 justify-content-center mb-5">
         <a href="https://telurasinhabibah.my.id/" target="_blank"
             class="link-offset-2 link-underline link-underline-opacity-0 text-dark zoom-card">
@@ -126,6 +133,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js"
         integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy"
         crossorigin="anonymous"></script>
+    <script src="script.js"></script>
 </body>
 
 </html>
