- perbaikan bug tampilan - menambahkan dropdown sosial media github - menambahkan front-end web developer di judul

--- a/index.html
+++ b/index.html
@@ -43,6 +43,10 @@
                             </li>
                             <li><a class="dropdown-item" href="https://www.linkedin.com/in/muhammad-syarruri-4a4136309/"
                                     target="_blank"><i class="fa-brands fa-linkedin"></i> Linkedin</a></li>
+                                <hr class="dropdown-divider">
+                            </li>
+                            <li><a class="dropdown-item" href="https://github.com/muhammadsyarruri"
+                                    target="_blank"><i class="fa-brands fa-github"></i> Github</a></li>
                         </ul>
                     </li>
                 </div>
@@ -51,7 +55,6 @@
     </nav>
 
     <!-- Header Start-->
-
     <div class="container-kotak" id="kontainer"></div>
     <section class="jumbotron text-center" style="padding-top: 2em;">
         <img src="assets/picture/profile.jpg" alt="Muhammad Syarruri" width="200px" class="rounded-circle position-relative z-3">
@@ -59,6 +62,7 @@
         <div class="d-inline-flex flex-column">
             <h1 class="fw-bold">Welcome to My Homepage</h1>
             <h2>My Name is Muhammad Syarruri</h2>
+            <h3>Front-End Web Developer</h3>
         </div>
         <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320" class="wave">
             <path fill="#E8F9FF" fill-opacity="1"
