perbaikan bug tampilan

--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
     <div class="contact d-flex flex-column align-items-center" id="contact">
         <h2 class="display-5 fw-bold text-center mb-5">Contact Me</h2>
 
-        <form class="needs-validation" style="width: 35em;" action="https://api.web3forms.com/submit" method="POST">
+        <form class="needs-validation" action="https://api.web3forms.com/submit" method="POST">
 
             <input type="hidden" name="access_key" value="64dbb743-f015-44b7-85c6-1e1478536280">
 
