menambahkan project converter

--- a/index.html
+++ b/index.html
@@ -77,6 +77,26 @@
     <h2 class="display-5 fw-bold text-center mb-5 pt-5" id="project">Project</h2>
 
     <div class="d-flex flex-wrap gap-5 justify-content-center mb-5">
+        <a href="https://muhammadsyarruri.github.io/insta-convert/" target="_blank"
+            class="link-offset-2 link-underline link-underline-opacity-0 text-dark zoom-card">
+            <div class="card" style="width: 18rem;">
+                <img src="assets/picture/instaConvert.png" class="card-img-top" alt="telurasinhabibah.my.id">
+                <div class="card-body">
+                    <h5 class="card-title">Converter</h5>
+                    <p class="card-text">converter sederhana menggunakan javascript</p>
+                    <div class="d-flex gap-1">
+                        <p class="html-tag">HTML</p>
+                        <p class="css-tag">CSS</p>
+                        <p class="js-tag">JavaScript</p>
+                    </div>
+                    <div class="text-end date">
+                        <p>Created on : May 2024</p>
+                        <p>Last update : never been updated</p>
+                    </div>
+                </div>
+            </div>
+        </a>
+
         <a href="https://telurasinhabibah.my.id/" target="_blank"
             class="link-offset-2 link-underline link-underline-opacity-0 text-dark zoom-card">
             <div class="card" style="width: 18rem;">
