membuat animasi opening

--- a/index.html
+++ b/index.html
@@ -12,6 +12,16 @@
 </head>
 
 <body>
+    <!-- ANIMASI OPENING -->
+    <div class="topOpening">
+        <p id="menyapa" class="display-6 mb-2 fw-bold"></p>
+    </div>
+    
+    <div class="bottomOpening">
+        <p class="display-6 mt-2 fw-bold">Welcome to My Homepage</p>
+    </div>
+    <!-- ANIMASI OPENING END -->
+
     <nav class="navbar navbar-expand-lg sticky-top" style="background-color: #C5BAFF;">
         <div class="container-fluid">
             <a class="navbar-brand ms-3" href="#">MUSYA</a>
@@ -60,8 +70,7 @@
         <img src="assets/picture/profile.jpg" alt="Muhammad Syarruri" width="200px" class="rounded-circle position-relative z-3">
         <br>
         <div class="d-inline-flex flex-column">
-            <h1 class="fw-bold">Welcome to My Homepage</h1>
-            <h2>My Name is Muhammad Syarruri</h2>
+            <h1 class="fw-bold">My Name is Muhammad Syarruri</h1>
             <h3>Front-End Web Developer</h3>
         </div>
         <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320" class="wave">
@@ -69,12 +78,12 @@
                 d="M0,64L48,69.3C96,75,192,85,288,112C384,139,480,181,576,192C672,203,768,181,864,149.3C960,117,1056,75,1152,64C1248,53,1344,75,1392,85.3L1440,96L1440,320L1392,320C1344,320,1248,320,1152,320C1056,320,960,320,864,320C768,320,672,320,576,320C480,320,384,320,288,320C192,320,96,320,48,320L0,320Z">
             </path>
         </svg>
-    </section>
+    </section>    <h2 class="display-
 
     <!-- Header End -->
 
     <!-- Card Container Start -->
-    <h2 class="display-5 fw-bold text-center mb-5 pt-5" id="project">Project</h2>
+5 fw-bold text-center mb-5 pt-5" id="project">Project</h2>
 
     <div class="d-flex flex-wrap gap-5 justify-content-center mb-5">
         <a href="https://muhammadsyarruri.github.io/insta-convert/" target="_blank"
