--- a/index.html
+++ b/index.html
@@ -13,12 +13,14 @@
 
 <body>
     <!-- ANIMASI OPENING -->
-    <div class="topOpening">
-        <p id="menyapa" class="display-6 mb-2 fw-bold"></p>
-    </div>
-    
-    <div class="bottomOpening">
-        <p class="display-6 mt-2 fw-bold">Welcome to My Homepage</p>
+    <div class="containerOpening">
+        <div class="topOpening">
+            <p id="menyapa" class="display-6 mb-2 fw-bold"></p>
+        </div>
+
+        <div class="bottomOpening">
+            <p class="display-6 mt-2 fw-bold">Welcome to My Homepage</p>
+        </div>
     </div>
     <!-- ANIMASI OPENING END -->
 
@@ -53,11 +55,11 @@
                             </li>
                             <li><a class="dropdown-item" href="https://www.linkedin.com/in/muhammad-syarruri-4a4136309/"
                                     target="_blank"><i class="fa-brands fa-linkedin"></i> Linkedin</a></li>
-                                <hr class="dropdown-divider">
-                            </li>
-                            <li><a class="dropdown-item" href="https://github.com/muhammadsyarruri"
-                                    target="_blank"><i class="fa-brands fa-github"></i> Github</a></li>
-                        </ul>
+                            <hr class="dropdown-divider">
+                    </li>
+                    <li><a class="dropdown-item" href="https://github.com/muhammadsyarruri" target="_blank"><i
+                                class="fa-brands fa-github"></i> Github</a></li>
+                    </ul>
                     </li>
                 </div>
             </div>
@@ -67,7 +69,8 @@
     <!-- Header Start-->
     <div class="container-kotak" id="kontainer"></div>
     <section class="jumbotron text-center" style="padding-top: 2em;">
-        <img src="assets/picture/profile.jpg" alt="Muhammad Syarruri" width="200px" class="rounded-circle position-relative z-3">
+        <img src="assets/picture/profile.jpg" alt="Muhammad Syarruri" width="200px"
+            class="rounded-circle position-relative z-3">
         <br>
         <div class="d-inline-flex flex-column">
             <h1 class="fw-bold">My Name is Muhammad Syarruri</h1>
@@ -78,7 +81,8 @@
                 d="M0,64L48,69.3C96,75,192,85,288,112C384,139,480,181,576,192C672,203,768,181,864,149.3C960,117,1056,75,1152,64C1248,53,1344,75,1392,85.3L1440,96L1440,320L1392,320C1344,320,1248,320,1152,320C1056,320,960,320,864,320C768,320,672,320,576,320C480,320,384,320,288,320C192,320,96,320,48,320L0,320Z">
             </path>
         </svg>
-    </section>    <h2 class="display-
+    </section>
+    <h2 class="display-
 
     <!-- Header End -->
 
