--- a/index.html
+++ b/index.html
@@ -13,18 +13,16 @@
 
 <body>
     <!-- ANIMASI OPENING -->
-    <div class="containerOpening">
-        <div class="topOpening">
-            <p id="menyapa" class="display-6 mb-2 fw-bold"></p>
-        </div>
+    <div class="topOpening">
+        <p id="menyapa" class="display-6 mb-2 fw-bold"></p>
+    </div>
 
-        <div class="bottomOpening">
-            <p class="display-6 mt-2 fw-bold">Welcome to My Homepage</p>
-        </div>
+    <div class="bottomOpening">
+        <p class="display-6 mt-2 fw-bold">Welcome to My Homepage</p>
     </div>
     <!-- ANIMASI OPENING END -->
 
-    <nav class="navbar navbar-expand-lg sticky-top" style="background-color: #C5BAFF;">
+    <nav class="navbar navbar-expand-lg sticky-top">
         <div class="container-fluid">
             <a class="navbar-brand ms-3" href="#">MUSYA</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup"
@@ -77,7 +75,7 @@
             <h3>Front-End Web Developer</h3>
         </div>
         <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320" class="wave">
-            <path fill="#E8F9FF" fill-opacity="1"
+            <path fill="#0c2344" fill-opacity="1"
                 d="M0,64L48,69.3C96,75,192,85,288,112C384,139,480,181,576,192C672,203,768,181,864,149.3C960,117,1056,75,1152,64C1248,53,1344,75,1392,85.3L1440,96L1440,320L1392,320C1344,320,1248,320,1152,320C1056,320,960,320,864,320C768,320,672,320,576,320C480,320,384,320,288,320C192,320,96,320,48,320L0,320Z">
             </path>
         </svg>
@@ -87,7 +85,7 @@
     <!-- Header End -->
 
     <!-- Card Container Start -->
-5 fw-bold text-center mb-5 pt-5" id="project">Project</h2>
+5 fw-bold text-center mb-5 pt-5 text-light" id="project">Project</h2>
 
     <div class="d-flex flex-wrap gap-5 justify-content-center mb-5">
         <a href="https://muhammadsyarruri.github.io/insta-convert/" target="_blank"
@@ -132,7 +130,7 @@
     </div>
 
     <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320" class="wave">
-        <path fill="#C4D9FF" fill-opacity="1"
+        <path fill="#b4ceff" fill-opacity="1"
             d="M0,96L80,90.7C160,85,320,75,480,106.7C640,139,800,213,960,213.3C1120,213,1280,139,1360,101.3L1440,64L1440,320L1360,320C1280,320,1120,320,960,320C800,320,640,320,480,320C320,320,160,320,80,320L0,320Z">
         </path>
     </svg>
@@ -159,7 +157,7 @@
                 <textarea class="form-control" id="floatingTextarea2" name="pesan" required
                     style="height: 100px"></textarea>
             </div>
-            <button type="submit" class="btn border border-black">Kirim</button>
+            <button type="submit" class="btn border border-black bg-light">Kirim</button>
         </form>
     </div>
     <!-- Contact End -->
